[gd_scene load_steps=17 format=2]

[ext_resource path="res://sprites/AxeMan.png" type="Texture" id=1]
[ext_resource path="res://sprites/meter.png" type="Texture" id=2]
[ext_resource path="res://sprites/meter-miss.png" type="Texture" id=3]
[ext_resource path="res://sprites/meter-gauge.png" type="Texture" id=4]
[ext_resource path="res://AxeGuy.gd" type="Script" id=5]

[sub_resource type="CapsuleShape2D" id=1]
radius = 4.66452
height = 5.53774

[sub_resource type="Animation" id=2]
resource_name = "charge"
length = 1.5
tracks/0/type = "value"
tracks/0/path = NodePath("Meter:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Gauge:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Gauge:scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 1.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0.03, 0.03 ), Vector2( 0.9, 0.03 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Gauge:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 1.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0, -20 ), Vector2( 417.679, -20 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("Aim:position")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ) ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("Aim/CollisionShape2D:position")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0, 1.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( -13.5, -20.7 ), Vector2( 14.5, -20.7 ) ]
}

[sub_resource type="Animation" id=3]
resource_name = "chop"
length = 0.8
tracks/0/type = "value"
tracks/0/path = NodePath("Body:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 18, 19, 20, 21 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Hit/CollisionShape2D:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.7, 0.8 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 5, 6 ), Vector2( 1, 1 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Hit/CollisionShape2D:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.7, 0.8 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 16, -1 ), Vector2( 0, 0 ) ]
}

[sub_resource type="Animation" id=4]
loop = true
step = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath("Body:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6, 0.8 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 2, 3, 4, 3, 2 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Meter:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Gauge:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Miss:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}

[sub_resource type="Animation" id=9]
resource_name = "missed"
tracks/0/type = "value"
tracks/0/path = NodePath("Miss:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Gauge:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}

[sub_resource type="Animation" id=5]
length = 0.8
loop = true
step = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath("Body:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 6, 7, 8, 9 ]
}

[sub_resource type="RectangleShape2D" id=6]
extents = Vector2( 1.94345, 3.24788 )

[sub_resource type="RectangleShape2D" id=7]
extents = Vector2( 0.17883, 3.55333 )

[sub_resource type="RectangleShape2D" id=10]
extents = Vector2( 1.74956, 1.67936 )

[sub_resource type="Animation" id=11]
resource_name = "left"
length = 0.8
tracks/0/type = "value"
tracks/0/path = NodePath("Hit/CollisionShape2D:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.7, 0.8 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 5, 6 ), Vector2( 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Hit/CollisionShape2D:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.7, 0.8 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( -16, -1 ), Vector2( 0, 0 ) ]
}

[sub_resource type="Animation" id=12]
resource_name = "right"
length = 0.8
tracks/0/type = "value"
tracks/0/path = NodePath("Hit/CollisionShape2D:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.7, 0.8 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 16, -1 ), Vector2( 0, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Hit/CollisionShape2D:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.7, 0.8 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 5, 6 ), Vector2( 1, 1 ) ]
}

[node name="AxeGuy" type="KinematicBody2D"]
scale = Vector2( 3, 3 )
script = ExtResource( 5 )

[node name="Body" type="Sprite" parent="."]
texture = ExtResource( 1 )
hframes = 25
frame = 21

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -0.529732, 0 )
shape = SubResource( 1 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "idle"
anims/charge = SubResource( 2 )
anims/chop = SubResource( 3 )
anims/idle = SubResource( 4 )
anims/missed = SubResource( 9 )
anims/move = SubResource( 5 )

[node name="Meter" type="Sprite" parent="."]
position = Vector2( 0, -20 )
scale = Vector2( 0.03, 0.03 )
texture = ExtResource( 2 )

[node name="Miss" type="Sprite" parent="."]
position = Vector2( 0, -20 )
scale = Vector2( 0.03, 0.03 )
texture = ExtResource( 3 )

[node name="Gauge" type="Sprite" parent="."]
position = Vector2( 0, -20 )
scale = Vector2( 0.03, 0.03 )
texture = ExtResource( 4 )

[node name="Camera2D" type="Camera2D" parent="."]
current = true

[node name="Target" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Target"]
position = Vector2( 8.60432, -20.8926 )
shape = SubResource( 6 )

[node name="Aim" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Aim"]
position = Vector2( -13.5, -20.7 )
shape = SubResource( 7 )

[node name="Hit" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hit"]
shape = SubResource( 10 )

[node name="HitArea" type="AnimationPlayer" parent="."]
anims/left = SubResource( 11 )
anims/right = SubResource( 12 )
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
[connection signal="area_entered" from="Target" to="." method="_on_Target_area_entered"]
[connection signal="area_exited" from="Target" to="." method="_on_Target_area_exited"]
